Improve visible distinction of wrong/correct syntax examples (#14)
Closes #13

--- a/web_modules/layouts/Page/index.css
+++ b/web_modules/layouts/Page/index.css
@@ -97,9 +97,10 @@
 
     &::after,
     &::before {
-      background: color(whitesmoke a(50%));
+      background: whitesmoke;
       bottom: 0;
       content: "";
+      opacity: 0.5;
       position: absolute;
       right: 0;
       top: 0;
@@ -107,7 +108,8 @@
     }
 
     &::before {
-      background: color(whitesmoke a(75%));
+      background: whitesmoke;
+      opacity: 0.75;
       width: 0.5em;
     }
 
@@ -116,6 +118,22 @@
       line-height: 1.5;
       overflow: auto;
       padding: 1em 1.5em 1em 1em;
+    }
+
+    &:global(.valid-pattern) {
+      & > code,
+      &::before,
+      &::after {
+        background: #eef7ee;
+      }
+    }
+
+    &:global(.invalid-pattern) {
+      & > code,
+      &::before,
+      &::after {
+        background: #fee;
+      }
     }
   }
 
